SQL_query_templates

--- a/SQL_query_templates.ipynb
+++ b/SQL_query_templates.ipynb
@@ -72,6 +72,32 @@
     "FROM `adwentureworks_db.salesorderheader` AS header\n",
     "GROUP BY header.OrderDate, order_month1, order_month2;"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 4. DIFFERENCE between two DATES\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# BigQuery\n",
+    "SELECT DATE_DIFF(ActualEndDate, ActualStartDate, day) AS days_diff,\n",
+    "  AVG(DATE_DIFF(ActualEndDate, ActualStartDate, day)) AS avg_days_diff,\n",
+    "  ROUND(AVG(DATE_DIFF(ActualEndDate, ActualStartDate, day)),2) AS avg_days_diff1\n",
+    "FROM `tc-da-1.adwentureworks_db.workorderrouting`\n",
+    "-- WHERE ActualStartDate BETWEEN '2004-01-01' AND '2004-01-31'\n",
+    "GROUP BY days_diff;\n",
+    "#MySQL\n",
+    "SELECT DATE_DIFF(ActualEndDate, ActualStartDate) AS days_diff,\n",
+    "FROM `tc-da-1.adwentureworks_db.workorderrouting`;"
+   ]
   }
  ],
  "metadata": {
