update-SQL_query_templates

--- a/SQL_query_templates.ipynb
+++ b/SQL_query_templates.ipynb
@@ -36,11 +36,17 @@
     "# BigQuery\n",
     "SELECT Firstname\n",
     "FROM `adwentureworks_db.contact`\n",
-    "WHERE REGEXP_CONTAINS (Firstname, '^[AEIOUaeiou]')\n",
+    "WHERE REGEXP_CONTAINS (Firstname, '^[AEIOUaeiou]') # start with - '^[AEIOUaeiou]', end with '[AEIOUaeiou]$'\n",
     "# MySQL\n",
     "SELECT Firstname\n",
     "FROM `adwentureworks_db.contact`\n",
-    "WHERE Firstname REGEXP '^[AEIOUaeiou]'"
+    "WHERE Firstname REGEXP '^[AEIOUaeiou]' # start with - '^[AEIOUaeiou]', end with '[AEIOUaeiou]$'\n",
+    "# MySQL\n",
+    "SELECT DISTINCT(city) FROM station WHERE city REGEXP '[AEIOUaeiou]$';\n",
+    "SELECT DISTINCT(city) FROM station WHERE city REGEXP '^[AEIOUaeiou].*[AEIOUaeiou]$'; # start with any vowel (uppercase or lowercase) and end with any vowel.\n",
+    "SELECT DISTINCT(city) FROM station WHERE city REGEXP '^[^AEIOUaeiou]'; # NOT start with any vowel (uppercase or lowercase)\n",
+    "SELECT DISTINCT(city) FROM station WHERE city REGEXP '[^AEIOU aeiou]$'; # NOT end with any vowel (uppercase or lowercase)\n",
+    "SELECT DISTINCT(city) FROM station WHERE city REGEXP '^[^AEIOUaeiou]|[^AEIOUaeiou]$'; # NOT start with any vowel (uppercase or lowercase) OR NOT end with any vowel"
    ]
   },
   {
@@ -77,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. DIFFERENCE between two DATES\n",
+    "# 4. DIFFERENCE between two DATES using DATE_DIFF\n",
     "---"
    ]
   },
@@ -97,6 +103,25 @@
     "#MySQL\n",
     "SELECT DATE_DIFF(ActualEndDate, ActualStartDate) AS days_diff,\n",
     "FROM `tc-da-1.adwentureworks_db.workorderrouting`;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. PULLING only MONTH from DATE\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT client_id, MONTH(time_id) AS month, COUNT(DISTINCT(user_id)) AS users_num\n",
+    "FROM fact_events\n",
+    "GROUP BY client_id, month;"
    ]
   }
  ],
