--- a/SQL_query_templates.ipynb
+++ b/SQL_query_templates.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1. LONGEST & SHORTEST names\n",
+    "## 1. LONGEST & SHORTEST names\n",
     "---"
    ]
   },
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. ONLY SPECIFIC CHARACTERS\n",
+    "## 2. ONLY SPECIFIC CHARACTERS\n",
     "---"
    ]
   },
@@ -53,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. DATE from FULL DATE format\n",
+    "## 3. DATE from FULL DATE format\n",
     "---"
    ]
   },
@@ -83,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 4. DIFFERENCE between two DATES using DATE_DIFF\n",
+    "## 4. DIFFERENCE between two DATES using DATE_DIFF\n",
     "---"
    ]
   },
@@ -109,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. PULLING only MONTH from DATE\n",
+    "## 5. PULLING only MONTH from DATE\n",
     "---"
    ]
   },
@@ -122,6 +122,93 @@
     "SELECT client_id, MONTH(time_id) AS month, COUNT(DISTINCT(user_id)) AS users_num\n",
     "FROM fact_events\n",
     "GROUP BY client_id, month;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6. ORDER by the last characters\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SELECT Name FROM students WHERE Marks > 75 ORDER BY RIGHT(name,3), ID;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ALTERNATIVE QUERIES:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. PATTERN P(20). (prints 20 rows starting with one * and adding additional * on top every row down to bottom) \n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "WITH RECURSIVE star_pattern AS (\n",
+    "    SELECT 1 AS star_count\n",
+    "    UNION ALL\n",
+    "    SELECT star_count + 1\n",
+    "    FROM star_pattern\n",
+    "    WHERE star_count < 20)\n",
+    "SELECT REPEAT('* ', star_count) AS stars\n",
+    "FROM star_pattern;\n",
+    "#ORDER BY stars DESC; - will print from 20 down to 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. PRIME numbers less than or equal to 1000\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Step 1: Creating a recursive CTE to generate numbers\n",
+    "WITH RECURSIVE numbers AS (\n",
+    "    SELECT 2 AS num\n",
+    "    UNION ALL\n",
+    "    SELECT num + 1\n",
+    "    FROM numbers\n",
+    "    WHERE num < 1000\n",
+    "),\n",
+    "#Step 2: Identifying prime numbers\n",
+    "primes AS (\n",
+    "    SELECT num AS prime\n",
+    "    FROM numbers n1\n",
+    "    WHERE NOT EXISTS (\n",
+    "        SELECT 1\n",
+    "        FROM numbers n2\n",
+    "        WHERE n2.num < n1.num\n",
+    "          AND n1.num % n2.num = 0\n",
+    "    )\n",
+    ")\n",
+    "#Step 3: Concatenating the prime numbers with '&' separator\n",
+    "SELECT GROUP_CONCAT(prime ORDER BY prime SEPARATOR '&') AS prime_list\n",
+    "FROM primes;"
    ]
   }
  ],
